# Agon-Eval-Harness

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  prd_content.md  pyproject.toml
.github/workflows/: ci.yaml
agon/: __init__.py  secrets.py
agon/analysis/: __init__.py  errors.py  logs.py  regression.py
agon/calibrate/: __init__.py  runner.py
agon/cli/: __init__.py  app.py
agon/config/: __init__.py  env.py  loader.py
agon/cost/: __init__.py  estimate.py  prices.py
agon/dataset/: __init__.py  loader.py
agon/evals/: __init__.py
agon/observability/: __init__.py  exporter.py  otel.py  semconv.py
agon/reporting/: __init__.py  generator.py
agon/retrieval/: __init__.py  bm25.py  corpus.py  hybrid.py  interface.py  lancedb_store.py  metrics.py  report.py  scorer.py  task.py
agon/review/: __init__.py  store.py
agon/schemas/: __init__.py  models.py
agon/scoring/: __init__.py  adversarial.py  agent.py  base.py  composite.py  inspect_scorer.py  judge.py  llm.py  non_llm.py  plugins.py
agon/stats/: __init__.py  kappa.py  normal.py  proportion.py
agon/sut/: __init__.py  agent.py  agent_messages.py  contract.py  langgraph.py  solvers.py
agon/task/: __init__.py  builder.py  resume.py
docs/: extending.md  langsmith-dashboards.md  observability.md  phase-2-scope.md  running-real-evals.md  training-manual-toc.md
docs/decisions/: ADR-0001-inspect-vs-custom.md  ADR-0002-lancedb-vs-pgvector.md  ADR-0003-otel-export.md  ADR-0004-langgraph-bridge.md  ADR-0005-offline-adversarial.md  ADR-0006-real-provider-hardening.md  ADR-0007-statistical-rigor.md  ADR-0008-extensibility-contract.md  ADR-0009-run-recovery-error-taxonomy.md  ADR-0010-secrets-config-hardening.md  ADR-0011-langsmith-dashboards.md  ADR-0012-regulated-domain-harness.md  ADR-0013-inspect-evals-register.md
docs/methodology/: build_docx.py  measuring-agentic-systems.md
docs/observability/: docker-compose.tempo.yml  tempo.yaml
docs/training-manual/: Agon-Practitioners-Manual-Part-I.md  Agon-Practitioners-Manual-Part-II.md  Agon-Practitioners-Manual-Part-III.md  Agon-Practitioners-Manual-Part-IV.md  Agon-Practitioners-Manual-Part-V.md  Agon-Practitioners-Manual-Part-VI-and-BackMatter.md  Agon-Practitioners-Manual.docx  Cover Page.docx  build_docx.py
examples/: adversarial_quickstart.py  agent_quickstart.py  quickstart.py  run.toml
examples/adversarial/: owasp_smoke.yaml
examples/calibration/: labeled.yaml
examples/capstone/: README.md  capstone.py  dataset.yaml
examples/datasets/: agent_smoke.yaml  rag_smoke.yaml
examples/gait_triage/: README.md  dataset.yaml  run.py  triage_scorer.py
examples/retrieval/: corpus.yaml  qrels.yaml
examples/text_to_sql/: dataset.yaml  run.py  schema.sql  sql_scorer.py
templates/your-eval/: README.md  dataset.yaml  run.py  scorer.py  sut_adapter.py  test_scorer.py
tests/: test_adversarial.py  test_agent.py  test_calibrate.py  test_calibration_ci.py  test_cli.py  test_cli_plugin.py  test_cli_resilience.py  test_cli_resume.py  test_composite.py  test_cost.py  test_cost_reporting.py  test_dataset.py  test_doctor.py  test_env_loading.py  test_error_taxonomy.py  test_errors.py  test_gait_routing.py  test_gait_triage.py  test_gait_triage_inspect_task.py  test_observability.py  test_observability_enrichment.py  test_per_case_timeout.py  test_plugins.py  test_preflight_cli.py  test_redaction_artifacts.py  test_regression.py  test_regression_significance.py  test_reporting.py  test_resilience.py  test_resume.py  test_resume_units.py  test_retrieval.py  test_review.py  test_schemas.py  test_scorers_llm.py  test_scorers_non_llm.py  test_secrets.py  test_stats.py  test_stats_reporting.py  test_sut.py  (+4 more)
(+29 files in other folders)
